--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -4,21 +4,23 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"  # Adjust based on your Python version
+    python: "3.9"  # Ensure you use a valid Python version
 
-# Python settings
+# Python dependencies
 python:
   install:
-    - requirements: requirements.txt  # Install dependencies
+    - requirements: requirements.txt
 
 # Documentation settings
 sphinx:
-  configuration: docs/conf.py  # If using Sphinx (reStructuredText)
+  configuration: docs/conf.py  # If using Sphinx
+
+# Valid output formats
 formats:
+  - htmlzip
   - pdf
   - epub
-  - html
 
-# MkDocs support (for modern Markdown-based docs)
+# MkDocs support (if using Markdown-based docs)
 mkdocs:
-  configuration: mkdocs.yml  # If using MkDocs
+  configuration: mkdocs.yml  # Only include this if you're using MkDocs
