--- a/readthedocs.yaml
+++ b/readthedocs.yaml
@@ -4,23 +4,19 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9"  # Ensure you use a valid Python version
+    python: "3.9"  # Ensure it's a string
 
 # Python dependencies
 python:
   install:
     - requirements: requirements.txt
 
-# Documentation settings
+# Sphinx configuration (Remove this if using MkDocs)
 sphinx:
-  configuration: docs/conf.py  # If using Sphinx
+  configuration: docs/conf.py  # Make sure this file exists!
 
 # Valid output formats
 formats:
   - htmlzip
   - pdf
   - epub
-
-# MkDocs support (if using Markdown-based docs)
-mkdocs:
-  configuration: mkdocs.yml  # Only include this if you're using MkDocs
